--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "chalk": "^5.3.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
