--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.11.0",
     "axios": "^1.10.0",
     "chalk": "^5.3.0",
     "discord.js": "^14.15.3",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@types/bun": "^1.2.17",
     "@types/node": "^20.12.12",
+    "prisma": "^6.11.0",
     "typescript": "^5.4.5"
   }
 }
