--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.5",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "prettier": "^3.6.2",
     "sequelize": "^6.37.7",
     "zod": "^3.23.8"
   },
@@ -17,6 +18,11 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
+    "start": "bun run src/index.ts",
+    "dev": "bun --watch src/index.ts",
+    "debug": "DEBUG=true bun --inspect src/index.ts",
+    "build": "bun build src/index.ts --outdir ./dist --target bun",
+    "prod": "NODE_ENV=production bun run src/index.ts",
     "benchmark": "bun run scripts/run-benchmark.ts",
     "benchmark:detailed": "bun run scripts/benchmark_kv.ts"
   }
