--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.5",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "prettier": "^3.6.2",
     "sequelize": "^6.37.7",
     "zod": "^3.23.8"
   },
